Add document file ingestion flow
